# viewyard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  INSTALL.md  LICENSE  README.md  RELEASE_NOTES_v0.2.0.md  SECURITY.md  TESTING.md  cliff.toml  devbox.json  fix-git-configs.sh  improved-gitconfig  install.sh  justfile  prompt.md  test-runner.sh  workspace.json
.github/workflows/: ci.yml  release.yml  rust.yml
docs/: UNSAFE_OPERATIONS.md  api-token-generation.md  auggie-tool-limitations.md
scripts/: migrate-view-to-git.py  models.py  onboard.py  onboard_clean.py  services.py  setup-view-justfile.sh  setup-workspace.py  ui.py  validate-view-context.py  view-commands.py  view-manager.py  workspace.py
src/: config.rs  error_handling.rs  git.rs  github.rs  interactive.rs  lib.rs  main.rs  models.rs  search.rs  ui.rs
src/commands/: mod.rs  onboard.rs  view.rs  workspace.rs
templates/: view-justfile  viewyard-context
templates/viewsets/: generic-team.yaml  starter.yaml
tests/: README.md  git_operations_tests.rs  git_tests.rs  integration_tests.rs  pytest.ini  real_integration_tests.rs  real_workflow_tests.rs  run_tests.py  simple_integration.rs  stress_tests.rs  test_integration.py  test_onboarding.py  test_onboarding_clean.py  test_utils.py  test_utils.rs  test_validation_system.py  test_viewset_detection.py  unit_tests.rs
