[package]
name = "viewyard"
version = "0.1.0"
edition = "2021"
description = "Multi-repository workspace management tool"
license = "MIT"
repository = "https://github.com/daniel-heater-imprivata/viewyard"
keywords = ["git", "workspace", "cli", "development"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
