[package]
name = "viewyard"
version = "0.6.0"
edition = "2021"
description = "Multi-repository workspace management tool"
license = "MIT"
repository = "https://github.com/dheater/viewyard"
keywords = ["git", "workspace", "cli", "development"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
serde_json = "1"
fuzzy-matcher = "0.3"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3.0"

# Clippy configuration - fail on warnings, no exceptions
[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow some pedantic lints that are too noisy for this project
module_name_repetitions = "allow"
missing_errors_doc = "allow"
too_many_lines = "allow"
multiple_crate_versions = "allow"

# cargo-dist configuration
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
